Spelling error fix

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <hr>
                         <h5>Jeff Bezos</h5>
                         <h6>"I'm forever grateful for the services of 
-                            Rutishauser Web Development. I couln't have done it without them."
+                            Rutishauser Web Development. I couldn't have done it without them."
                         </h6>
                         
                     <hr>
